--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -6,6 +6,20 @@
   --font-mono: "Fira Code"
 }
 
+// ADDED BY ME
+::-webkit-scrollbar{
+  height:7px;
+  width: 7px;
+}
+::-webkit-scrollbar-track{
+  color: white;
+  background-color: var(--lightgray);
+}
+::-webkit-scrollbar-thumb{
+  background-color: lightblue;
+  border-radius: 10px;
+}
+
 // typography
 html {
   scroll-behavior: smooth;
@@ -277,6 +291,8 @@ pre {
   overflow-x: scroll;
 }
 
+
+
 code {
   font-family: var(--font-mono);
   font-size: 0.85em;
@@ -284,6 +300,7 @@ code {
   border-radius: 5px;
   background: var(--lightgray);
 }
+
 
 @keyframes fadeIn {
   0% {opacity:0;}
