--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -15,13 +15,13 @@
 }
 
 [saved-theme="dark"] {
-  --light: #1e1e21 !important;
+  --light: #181926 !important;
   --dark: #fbfffe !important;
-  --secondary: #6b879a !important;
+  --secondary: #61b5ec !important;
   --visited: #4a575e !important;
   --tertiary: #84a59d !important;
   --primary: #f58382 !important;
-  --gray: #d4d4d4 !important;
+  --gray: #b9b9b9 !important;
   --lightgray: #292633 !important;
   --outlinegray: #343434 !important;
   --highlighted: #574010;
